[gd_scene load_steps=9 format=3 uid="uid://b6wq3ox1h0lcj"]

[ext_resource type="Texture2D" uid="uid://biopgmfrbkuc7" path="res://assets/UI/blue_panels/LargeMenuBGT03.1BlueDark.png" id="1_tf3wp"]
[ext_resource type="Theme" uid="uid://tl4owy3ebao7" path="res://engine/player_ui/player_ui_theme.tres" id="2_spgwn"]
[ext_resource type="Script" uid="uid://43gtibk0e5a4" path="res://engine/cities/city_ui/city_ui.gd" id="2_ttruw"]
[ext_resource type="Texture2D" uid="uid://bre1f0fath2ya" path="res://assets/UI/placeholder/gibraltar-nightlife.png" id="3_71dqv"]
[ext_resource type="Texture2D" uid="uid://10iq42ux2jj" path="res://assets/UI/placeholder/chiara-summer-mO9EzDBd5nI-unsplash.png" id="4_71dqv"]
[ext_resource type="Texture2D" uid="uid://blf4ar2y0dvxq" path="res://assets/UI/blue_buttons/PCMainButtonNormalBlueT02_filled.png" id="4_ttruw"]
[ext_resource type="FontFile" uid="uid://bvmpsl44wcfpl" path="res://assets/UI/fonts/NK57/NK57 Monospace Ex Bd.otf" id="5_ttruw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itjk8"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.203922, 0.866667, 0.92549, 1)

[node name="CityUI" type="TextureRect"]
z_index = 800
offset_left = 365.0
offset_top = 107.0
offset_right = 1645.0
offset_bottom = 1007.0
texture = ExtResource("1_tf3wp")
script = ExtResource("2_ttruw")

[node name="FactionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 94.0
offset_top = 129.0
offset_right = 433.0
offset_bottom = 161.0
theme = ExtResource("2_spgwn")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Pan American Federation"

[node name="HeatLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 773.0
offset_top = 67.0
offset_right = 916.0
offset_bottom = 99.0
theme = ExtResource("2_spgwn")
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
text = "Heat: 0%"

[node name="AcclaimLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 954.0
offset_top = 67.0
offset_right = 1146.0
offset_bottom = 99.0
theme = ExtResource("2_spgwn")
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
text = "Acclaim: 0%"

[node name="CityNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 86.0
offset_top = 69.0
offset_right = 493.0
offset_bottom = 128.0
theme = ExtResource("2_spgwn")
theme_override_font_sizes/font_size = 36
text = "NEW GIBRALTAR"
horizontal_alignment = 1

[node name="MainOptions" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 87.0
offset_top = 216.0
offset_right = 350.0
offset_bottom = 416.0

[node name="TextureButton" type="TextureButton" parent="MainOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MainOptions/TextureButton"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Diplomacy"

[node name="TextureButton5" type="TextureButton" parent="MainOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MainOptions/TextureButton5"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "City Info"

[node name="TextureButton2" type="TextureButton" parent="MainOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MainOptions/TextureButton2"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Contracts"

[node name="TextureButton3" type="TextureButton" parent="MainOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MainOptions/TextureButton3"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Bar"

[node name="TextureButton4" type="TextureButton" parent="MainOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MainOptions/TextureButton4"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Docks"

[node name="TextureButton6" type="TextureButton" parent="MainOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MainOptions/TextureButton6"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Military"

[node name="ContractContacts" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 87.0
offset_top = 216.0
offset_right = 350.0
offset_bottom = 416.0

[node name="ContractNPCButton" type="BoxContainer" parent="ContractContacts"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="ContractContacts/ContractNPCButton"]
custom_minimum_size = Vector2(32, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_71dqv")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ContractContacts/ContractNPCButton"]
layout_mode = 2

[node name="Label" type="Label" parent="ContractContacts/ContractNPCButton/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ttruw")
theme_override_font_sizes/font_size = 14
text = "Chiara Summer"

[node name="Label2" type="Label" parent="ContractContacts/ContractNPCButton/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0, 0.239216, 1)
theme_override_font_sizes/font_size = 14
text = "AE"

[node name="Label3" type="Label" parent="ContractContacts/ContractNPCButton/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Ambassador"

[node name="Label4" type="Label" parent="ContractContacts/ContractNPCButton/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Opinion: 0 / 100"

[node name="ContractNPCButton2" type="BoxContainer" parent="ContractContacts"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="ContractContacts/ContractNPCButton2"]
custom_minimum_size = Vector2(32, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_71dqv")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ContractContacts/ContractNPCButton2"]
layout_mode = 2

[node name="Label" type="Label" parent="ContractContacts/ContractNPCButton2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ttruw")
theme_override_font_sizes/font_size = 14
text = "Chiara Summer"

[node name="Label2" type="Label" parent="ContractContacts/ContractNPCButton2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.96, 0.58416, 0.1248, 1)
theme_override_font_sizes/font_size = 14
text = "WAFL"

[node name="Label3" type="Label" parent="ContractContacts/ContractNPCButton2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Ambassador"

[node name="Label4" type="Label" parent="ContractContacts/ContractNPCButton2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Opinion: 0 / 100"

[node name="ContractNPCButton3" type="BoxContainer" parent="ContractContacts"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="ContractContacts/ContractNPCButton3"]
custom_minimum_size = Vector2(32, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_71dqv")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ContractContacts/ContractNPCButton3"]
layout_mode = 2

[node name="Label" type="Label" parent="ContractContacts/ContractNPCButton3/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ttruw")
theme_override_font_sizes/font_size = 14
text = "Chiara Summer"

[node name="Label2" type="Label" parent="ContractContacts/ContractNPCButton3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(5.39064e-06, 0.967203, 0.00552695, 1)
theme_override_font_sizes/font_size = 14
text = "PAF"

[node name="Label3" type="Label" parent="ContractContacts/ContractNPCButton3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Ambassador"

[node name="Label4" type="Label" parent="ContractContacts/ContractNPCButton3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Opinion: 0 / 100"

[node name="ContractNPCButton4" type="BoxContainer" parent="ContractContacts"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="ContractContacts/ContractNPCButton4"]
custom_minimum_size = Vector2(32, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_71dqv")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ContractContacts/ContractNPCButton4"]
layout_mode = 2

[node name="Label" type="Label" parent="ContractContacts/ContractNPCButton4/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ttruw")
theme_override_font_sizes/font_size = 14
text = "Chiara Summer"

[node name="Label2" type="Label" parent="ContractContacts/ContractNPCButton4/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0, 0.239216, 1)
theme_override_font_sizes/font_size = 14
text = "AE"

[node name="Label3" type="Label" parent="ContractContacts/ContractNPCButton4/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Ambassador"

[node name="Label4" type="Label" parent="ContractContacts/ContractNPCButton4/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Opinion: 0 / 100"

[node name="ContactActions" type="VBoxContainer" parent="ContractContacts"]
layout_mode = 2
theme_override_constants/separation = -30

[node name="TextureButton" type="TextureButton" parent="ContractContacts/ContactActions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="ContractContacts/ContactActions/TextureButton"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CityGreeting" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CityGreeting"]
layout_mode = 0
offset_left = 596.0
offset_top = 130.0
offset_right = 1148.0
offset_bottom = 501.0
theme_override_styles/panel = SubResource("StyleBoxFlat_itjk8")

[node name="TextureRect" type="TextureRect" parent="CityGreeting/PanelContainer"]
layout_mode = 2
texture = ExtResource("3_71dqv")
expand_mode = 1
stretch_mode = 4

[node name="CityDescription" type="RichTextLabel" parent="CityGreeting"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 594.0
offset_top = 532.0
offset_right = 1114.0
offset_bottom = 817.0
theme = ExtResource("2_spgwn")
text = "The docks of New Gibraltar are electrifying. Military vessels, luxury yachts, and cruise ships form an unlikely crowd as they jostle to enter the Mediterranean. Wild-eyed patriots preach a return to independence, and perfumed businesspeople in the \"defense industry\" offer drinks to every captain coming ashore.

The on-again off-again independence of this tiny city state has attracted some of the most ambitious, wanted, and opportunistic people on this side of the Atlantic. It's an intoxicatinging mix, punctuated by constant smell of ozone in the air. Energy weapons are fired here. Often.

"
fit_content = true

[node name="ContractCloseUp" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Container" type="BoxContainer" parent="ContractCloseUp"]
layout_mode = 0
offset_left = 828.0
offset_top = 130.0
offset_right = 1147.0
offset_bottom = 449.0

[node name="TextureRect" type="TextureRect" parent="ContractCloseUp/Container"]
layout_mode = 2
texture = ExtResource("4_71dqv")

[node name="ContractActions" type="VBoxContainer" parent="ContractCloseUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 87.0
offset_top = 710.0
offset_right = 350.0
offset_bottom = 914.0
theme_override_constants/separation = -30

[node name="TextureButton" type="TextureButton" parent="ContractCloseUp/ContractActions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="ContractCloseUp/ContractActions/TextureButton"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="TextureButton5" type="TextureButton" parent="ContractCloseUp/ContractActions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_spgwn")
texture_normal = ExtResource("4_ttruw")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="ContractCloseUp/ContractActions/TextureButton5"]
layout_mode = 0
offset_left = 35.0
offset_top = 14.0
offset_right = 125.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Accept"

[node name="NPCDescription" type="RichTextLabel" parent="ContractCloseUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 823.0
offset_top = 566.0
offset_right = 1153.0
offset_bottom = 1346.0
theme = ExtResource("2_spgwn")
theme_override_font_sizes/normal_font_size = 16
text = "Sed mattis pretium dolor. Morbi viverra, ligula in cursus varius, velit erat consectetur enim, ultricies venenatis nisi lacus nec velit. Morbi neque dolor, scelerisque a purus vestibulum, lacinia maximus libero. Aenean facilisis ligula nisl, nec rutrum augue volutpat eget. 

Vivamus vestibulum, ligula scelerisque mollis suscipit."
fit_content = true

[node name="ContractDescription" type="RichTextLabel" parent="ContractCloseUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 92.0
offset_top = 198.0
offset_right = 675.0
offset_bottom = 665.0
theme = ExtResource("2_spgwn")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Destroy [b]5 commercial vessels[/b] belonging to the [b][color=ffbb00]PAF[/color][/b].

Destroy [b]5 commercial vessels[/b] belonging to the [b][color=6390ff]European Front[/color][/b].

The vessels must be [b]large or larger[/b]. 

It does not matter if you are detected during this mission.

Complete the mission within [b]20 days [/b].

[b]ADVANCE[/b]: 
$6,000,000

[b]ON COMPLETION[/b]:
$20,000,000

[b]ON FAILURE[/b]:
[b][color=d4003d]Atlantic Empire:[/color][/b] -10 Standing
[b]Chiara Summers:[/b] -5 Opinion
"
fit_content = true

[node name="ContractNPCLabel" type="Label" parent="ContractCloseUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 820.0
offset_top = 467.0
offset_right = 1258.0
offset_bottom = 558.0
theme = ExtResource("2_spgwn")
theme_override_font_sizes/font_size = 30
text = "Chiara 
Summers"

[node name="MissionDetailsSubLabel" type="Label" parent="ContractCloseUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 94.0
offset_top = 129.0
offset_right = 494.0
offset_bottom = 161.0
theme = ExtResource("2_spgwn")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Sabotage European Trade"

[node name="MissionDetailsLabel" type="Label" parent="ContractCloseUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 86.0
offset_top = 69.0
offset_right = 555.0
offset_bottom = 128.0
theme = ExtResource("2_spgwn")
theme_override_font_sizes/font_size = 36
text = "MISSION DETAILS"
horizontal_alignment = 1
